--- a/Phi_3_Finetune.ipynb
+++ b/Phi_3_Finetune.ipynb
@@ -37,6 +37,7 @@
         "from huggingface_hub import notebook_login, HfApi\n",
         "from peft import prepare_model_for_kbit_training, LoraConfig, get_peft_model\n",
         "import logging\n",
+        "import numpy as np\n",
         "import os\n",
         "from tqdm import tqdm\n",
         "import time\n",
